--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 
 
@@ -13,10 +13,10 @@
 
 <body>
     <header class="header">
-        <a href="index.html"><img src="/image/emergency-app.png" alt="Logo Inicio"></a>
+        <a  href="index.html"><img class="header__logo" src="/image/emergency-app.png" alt="Logo Inicio"></a>
     </header>
     <main>
-        <img class="image" src="/image/mapa-mundo.png" alt="plano imagen del mundo">
+        
     </main>
 
 </body>
