--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         .header__logo {
             margin-top: 10px;
-            width: 160px;
+            width: 150px;
         }
 
         /* MAIN */
@@ -41,14 +41,32 @@
             align-items: center;
             justify-content: center;
 
+
+        }
+
+        .main__titulo--destacado {
+            color: #580c22;
+            margin-right: 10px;
+
+        }
+
+        .main__background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: linear-gradient(180deg, #ffffff 0%, #fdedcb 40%, #ffce6d 100%);
+            background-repeat: no-repeat;
+            z-index: -2;
+            min-height: 100vh;
+
         }
 
         .main__titulo {
             color: #821131;
-            text-align: center;
-            margin: 5px;
+            margin: 10px;
             display: flex;
-            align-items: center;
             justify-content: center;
             margin-top: 20px;
 
@@ -57,9 +75,9 @@
         .tarjeta {
             position: relative;
             width: 100%;
-            margin: 6px;
+            margin: 12px;
             border: 1px solid black;
-            max-width: 350px;
+            max-width: 100%;
             height: 220px;
             border-radius: 10px;
             box-shadow: ;
@@ -67,7 +85,8 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
         }
-        .tarjeta:hover{
+
+        .tarjeta:hover {
             transform: scale(1.10);
 
         }
@@ -86,23 +105,31 @@
 
         .tarjeta__titulo {
             text-align: center;
-            font-size: 20px;
+            font-size: 1,25rem;
             color: #FFF;
             position: absolute;
-            top: 50%;
+            top: 20%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 100%;
-            
+        }
+        .tarjeta__fecha{
+            color: white;
+            text-align: center;
+            font-size: 0,75rem;
+            position: absolute;
+            left: 50%;
+            top: 30%;
+            width: 100%;
+            transform: translate(-50%, -50%);
 
         }
+        .tarjeta__boton{}
 
         /* FOOTER */
         .footer {
-            background: linear-gradient(180deg, #ffffff 0%, #fdedcb 40%, #ffce6d 100%);
-            background-repeat: no-repeat;
+
             display: flex;
-            margin-top: 5px;
 
         }
     </style>
@@ -115,21 +142,29 @@
         <a href="index.html"><img class="header__logo" src="/image/emergency-app.png" alt="Logo Inicio"></a>
     </header>
     <main class="main">
-        <h1 class="main__titulo">Infórmate sobre desastres y ayuda disponible</h1>
+        <div class="main__background"></div>
+        <h3 class="main__titulo"><span class="main__titulo--destacado">Infórmate.</span> De los desastres y la ayuda
+            disponible.</h3>
         <section class="tarjeta">
-            <h2 class="tarjeta__titulo">inundaciones en Valencia</h2>
-            <a href="#"><img class="tarjeta__imagen" src="/image/inundaciones.jpg" alt=""></a>
+            <h2 class="tarjeta__titulo">Inundaciones en Valencia</h2>
+            <p class="tarjeta__fecha">29 de octubre de 2024</p>
+            <a class="tarjeta__boton" href="/dana-valencia-2024.html"></a>
+            <a href="/dana-valencia-2024.html"><img class="tarjeta__imagen" src="/image/inundaciones.jpg" alt=""></a>
         </section>
 
         <section class="tarjeta">
 
-            <h2 class="tarjeta__titulo">incendio en el Amazonas</h2>
+            <h2 class="tarjeta__titulo">Incendio en el Amazonas</h2>
+            <p class="tarjeta__fecha">22 de agosto de 2019</p>
+            <a class="tarjeta__boton" href="/dana-valencia-2024.html"></a>
             <a href="#"><img class="tarjeta__imagen" src="/image/amazonas.webp" alt=""></a>
 
         </section>
         <section class="tarjeta">
 
-            <h2 class="tarjeta__titulo">volcán en La Palma</h2>
+            <h2 class="tarjeta__titulo">Volcán en La Palma</h2>
+            <p class="tarjeta__fecha">19 de septiembre de 2021</p>
+            <a class="tarjeta__boton" href="/dana-valencia-2024.html"></a>
             <a href="#"><img class="tarjeta__imagen" src="/image/la-palma.jpg" alt=""></a>
 
         </section>
