--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         .main__titulo--destacado {
-            color: #83360a;
+            color: #881022;
             margin-right: 10px;
 
         }
@@ -64,7 +64,7 @@
         }
 
         .main__titulo {
-            color: #E85C0D;
+            color: #C7253E;
             margin: 10px;
             display: flex;
             justify-content: center;
