--- a/index.html
+++ b/index.html
@@ -154,7 +154,14 @@
         .footer {
 
             display: flex;
+            justify-content:center ;
 
+
+        }
+        .footer__enlace{
+            display: flex;
+            text-decoration: none;
+            margin: 10px;
         }
     </style>
 
@@ -205,8 +212,12 @@
 
     </main>
     <footer class="footer">
-        <a href="index.html"><img class="header__logo" src="/image/emergency-app.png" alt="Logo Inicio"></a>
-
+        <a class="footer__enlace" href="">Home</a>
+        <a class="footer__enlace" href="">Home</a>
+        <a class="footer__enlace" href="">Home</a>
+        <a class="footer__enlace" href="">Home</a>
+       
+        
     </footer>
 
 </body>
