--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         body {
 
             height: 100%;
-            background: linear-gradient(180deg, #ffffff 0%, #fdedcb 40%, #ffce6d 100%);
+            background-color: rgba(255, 206, 107, 0.36);
+            
         }
 
         /* HEADER */
@@ -27,12 +28,14 @@
             align-items: center;
             justify-content: space-around;
             margin: 10px;
+            background-color: #FFF;
+            border-radius: 8px;
         }
 
         .header__logo {
             margin-top: 5px;
             margin-right: 10px;
-            width: 120px;
+            width: 97px;
         }
 
         .header__select {
@@ -158,6 +161,7 @@
             text-decoration: none;
             border-radius: 10px;
             width: 200px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
         }
 
         .tarjeta__boton {
@@ -186,7 +190,7 @@
             display: flex;
             text-decoration: none;
             margin: 10px;
-            color: #C7253E;
+            color: #881022;
             font-size: 1.2rem;
         }
 
