--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <body>
     <header class="header">
         <!-- <a href="index.html"><img class="header__logo" src="/image/emergency-app.png" alt="Logo Inicio"></a> -->
-        <a class="header__logo" href="index.html">Emergeny App</a>
+        <a class="header__logo" href="index.html">Emergency App</a>
         <nav>
             <form action="" method="get">
                 <select class="header__select" name="menu" id="menu-select">
