--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: space-around;
             flex: 1;
 
 
@@ -120,7 +120,7 @@
             margin: 12px;
             /* border: 1px solid black; */
             max-width: 100%;
-            height: 220px;
+            height: 17.75rem;
             border-radius: 10px;
 
             transition: transform 0.3s ease;
