--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             align-items: center;
             justify-content: space-around;
             padding-top: 5px;
-            background-color: ##ce6b5c;
+            /* background-color: #ce6b5c; */
             border-radius: 0px 0px 20px 20px;
             box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2);
             height: 4rem;
@@ -201,7 +201,7 @@
 
         /* FOOTER */
         .footer {
-            
+
             margin-top: auto;
             border-top: 1px solid #E85C0D;
             display: flex;
@@ -210,7 +210,7 @@
             align-items: center;
             border-radius: 8px;
             background-color: rgba(0, 0, 0, 0.05);
-            box-shadow:8px 6px 6px 7px rgba(0, 0, 0, 0.2);
+            box-shadow: 8px 6px 6px 7px rgba(0, 0, 0, 0.2);
 
         }
 
@@ -224,33 +224,37 @@
             font-size: 1.2rem;
         }
 
-        .footer__enlace:visited {
+        /* .footer__enlace:visited {
             color: black;
 
-        }
+        } */
 
         .footer__enlace--rrss {
             font-size: 1.7rem;
+            color: #881022;
 
         }
-        .footer__enlaces{
+
+        .footer__enlaces {
             padding: 2em;
             display: flex;
             justify-content: space-evenly;
             width: 100%;
         }
-        .footer__autor{
+
+        .footer__autor {
             color: #E85C0D;
             opacity: 0.4;
             margin: 0.7em;
         }
 
         @media (min-width: 768px) {
-            .main{
+            .main {
                 margin-top: 2em;
                 margin-bottom: 2em;
             }
-            .main__titulo{
+
+            .main__titulo {
                 margin: 0.8em;
             }
 
