inicio de la página Dana 2024

--- a/dana-valencia-2024.html
+++ b/dana-valencia-2024.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dana Valencia</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Dana Valencia 2024</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <!-- <a href="index.html"><img class="header__logo" src="/image/emergency-app.png" alt="Logo Inicio"></a> -->
+        <a class="header__logo" href="index.html">Emergency App</a>
+        <nav>
+            <form action="" method="get">
+                <select class="header__select" name="menu" id="menu-select">
+                    <option value="tel:666000666">Ayuda</option>
+                    <option value="#">Actualidad</option>
+                    <option value="#">Por zonas</option>
+                </select>
+                <button class="header__boton" type="submit">Ir</button>
+            </form>
+            <ul class="header__menu">
+                <li><a class="header__menu header__nav" href="tel:666000666">Ayuda</a></li>
+                <li><a class="header__menu header__nav" href="#">Actualidad</a></li>
+                <li><a class="header__menu header__nav" href="#">Por zonas</a></li>
+            </ul>
+        </nav>
+
+
+
+    </header>
+
+    <main>
+
+        <h1>Dana en Valencia 2024</h1>
+
+        <nav>
+            <ul>
+                <li>Inicio</li>
+                <li>Mapa</li>
+                <li>Centros de asistencia</li>
+                <li>Voluntariado</li>
+            </ul>
+        </nav>
+
+        <p>Las inundaciones en Valencia de 2024 han dejado varios barrios bajo el agua, con cientos de personas desplazadas y daños graves en infraestructuras públicas y privadas. Los equipos de rescate, especialmente los VOLUNTARIOS, siguen trabajando en la zona para asegurar la evacuación de ciertas familias que han perdidos sus casas y ofrecer apoyo, tanto a nivel de alimentos, ropa, como apoyo económico y moral a las familias afectadas.</p>
+
+        <h2>Mapa de las zonas afectas en Valencia</h2>
+        <p>A continuación, puedes ver el área afectada en el mapa para situarte por dónde ha ocurrido la tragedia y para que puedas acercarte y ayudar al sitio correcto.</p>
+
+        <ul>
+
+        </ul>
+
+
+
+
+    </main>
+
 </body>
+
 </html>
