--- a/dana-valencia-2024.html
+++ b/dana-valencia-2024.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dana Valencia 2024</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -32,33 +33,62 @@
 
     </header>
 
-    <main>
+    <main class="main">
+        <header>
+            <h1>Dana en Valencia 2024</h1>
 
-        <h1>Dana en Valencia 2024</h1>
+            <nav>
+                <ul>
+                    <li>Inicio</li>
+                    <li>Mapa</li>
+                    <li>Centros de asistencia</li>
+                    <li>Voluntariado</li>
+                </ul>
+            </nav>
+        </header>
 
-        <nav>
-            <ul>
-                <li>Inicio</li>
-                <li>Mapa</li>
-                <li>Centros de asistencia</li>
-                <li>Voluntariado</li>
-            </ul>
-        </nav>
+        <p>Las inundaciones en Valencia de 2024 han dejado varios barrios bajo el agua, con cientos de personas
+            desplazadas y daños graves en infraestructuras públicas y privadas. Los equipos de rescate, especialmente
+            los VOLUNTARIOS, siguen trabajando en la zona para asegurar la evacuación de ciertas familias que han
+            perdidos sus casas y ofrecer apoyo, tanto a nivel de alimentos, ropa, como apoyo económico y moral a las
+            familias afectadas.</p>
 
-        <p>Las inundaciones en Valencia de 2024 han dejado varios barrios bajo el agua, con cientos de personas desplazadas y daños graves en infraestructuras públicas y privadas. Los equipos de rescate, especialmente los VOLUNTARIOS, siguen trabajando en la zona para asegurar la evacuación de ciertas familias que han perdidos sus casas y ofrecer apoyo, tanto a nivel de alimentos, ropa, como apoyo económico y moral a las familias afectadas.</p>
+        <section>
+            <h2>Mapa de las zonas afectas en Valencia</h2>
+            <p>A continuación, puedes ver el área afectada en el mapa para situarte por dónde ha ocurrido la tragedia y
+                para
+                que puedas acercarte y ayudar al sitio correcto.</p>
+            <!-- AQUÍ VA EL MAPA -->
+        </section>
+        <ul class="lista-tarjetas">
+            <li class="tarjeta">
+                <header>
+                </header>
 
-        <h2>Mapa de las zonas afectas en Valencia</h2>
-        <p>A continuación, puedes ver el área afectada en el mapa para situarte por dónde ha ocurrido la tragedia y para que puedas acercarte y ayudar al sitio correcto.</p>
-
-        <ul>
+            </li>
 
         </ul>
+
+        <section>
+            <h2>Noticias en tiempo real</h2>
+            <ul></ul>
+        </section>
+
 
 
 
 
     </main>
+    <footer class="footer">
+        <div class="footer__enlaces">
+            <a class="footer__enlace footer__enlace--ayuda" href="tel:666000666">Tel. Ayuda</a>
 
+            <a class="footer__enlace footer__enlace--rrss" href="#"><i class="fab fa-twitter-square"></i></i></a>
+            <a class="footer__enlace footer__enlace--rrss" href="#"><i class="fab fa-instagram-square"></i></a>
+            <a class="footer__enlace" href="#">FAQs</a>
+        </div>
+        <p class="footer__autor">Web creada por Jaume.</p>
+    </footer>
 </body>
 
 </html>
