--- a/dana-valencia-2024.html
+++ b/dana-valencia-2024.html
@@ -60,6 +60,7 @@
                 que puedas acercarte y ayudar al sitio correcto.</p>
             <!-- AQUÍ VA EL MAPA -->
         </section>
+        <h2>Puntos de entrega!</h2>
         <ul class="lista-tarjetas">
             <li class="tarjeta">
                 <header>
