--- a/dana-valencia-2024.html
+++ b/dana-valencia-2024.html
@@ -34,8 +34,8 @@
     </header>
 
     <main class="main">
-        <header>
-            <h1>Dana en Valencia 2024</h1>
+        <sidebar>
+
 
             <nav>
                 <ul>
@@ -45,7 +45,8 @@
                     <li>Voluntariado</li>
                 </ul>
             </nav>
-        </header>
+        </sidebar>
+        <h1>Dana en Valencia 2024</h1>
 
         <p>Las inundaciones en Valencia de 2024 han dejado varios barrios bajo el agua, con cientos de personas
             desplazadas y daños graves en infraestructuras públicas y privadas. Los equipos de rescate, especialmente
@@ -64,7 +65,109 @@
         <ul class="lista-tarjetas">
             <li class="tarjeta">
                 <header>
+                    <h3>EPPPS</h3>
                 </header>
+                <h6>Avenida de Jesús Morante Borrás, 46024, Valencia, Comunidad Valenciana</h6>
+                <ul>
+                    <li>Vehículos permitidos: Camión grande (>3500kg)</li>
+                    <li>Horario: Lunes a Viernes : 9:30-14:30h</li>
+                    <li> Teléfono: <a href="tel:+34623511986">+34 623 511 986 </a></li>
+                    <li> Email: <a href="mailto:info@eppps.es">info@eppps.es</a></li>
+                    <li> Información adicional: Avisad antes por teléfono tanto para entrega/recogida para poder
+                        coordinar voluntariaos para descargas/cargas Protección: botas de agua, mascarillas, guantes,
+                        gafas de protección... Desinfección: Lejía, cubos, mangueras... Herramientas: bombas de agua,
+                        generadores eléctricos/gasolina, palas, capazos... Mobiliarios: mesas, pupitres, sillas,
+                        pizarras...</li>
+                </ul>
+
+
+
+            </li>
+            <li class="tarjeta">
+                <header>
+                    <h3>Recogida y donación material para voluntarios</h3>
+
+                </header>
+                <h6>Falla Almirante Cadarso - Conde Altea
+                </h6>
+                <ul>
+                    <li>Vehículos admitidos:Camión mediano</li>
+                    <li>Horario: 9:00 - 13:00 y 16:00 - 20:00</li>
+                    <li> Teléfono: <a href="tel:+34679857053">+34 679 857 053 </a></li>
+                    <li> Información adicional: Se recogen y se donan luego a los voluntarios, lo siguiente:
+                        mascarillas, botas, guantes, gafas, escobas, haraganes, cubos, bolsas, cinta aislante o
+                        americana... </li>
+                </ul>
+
+            </li>
+            <li class="tarjeta">
+                <header>
+                    <h3>La resistencia</h3>
+
+                </header>
+                <h6>Avenida de Jesús Morante Borrás, 46024, Valencia, Comunidad Valenciana</h6>
+                <ul>
+                    <li>Vehículos admitidos :Camión grande (>3500kg)</li>
+                    <li>Horario: 24 horas</li>
+                    <li> Teléfono: <a href="tel:+692483016">+34 692 48 30 16</a></li>
+                    <li> Email: <a href="mailto:miguelgarcab@gmail.com">miguelgarcab@gmail.com</a></li>
+                    <li> Información adicional: Avisad con algo de antelacion para organizar a los voluntarios y que
+                        puedan ayudar a cargar y descargar</li>
+                </ul>
+
+
+            </li>
+            <li class="tarjeta">
+                <header>
+                    <h3>Polideportivo Municipal Almussafes</h3>
+                    <h6>Avda Laura Méndez, s/n, 46440 Almussafes, Valencia</h6>
+
+                </header>
+
+                <ul>
+                    <li>Vehículos permitidos: Camión grande (>3500kg)</li>
+                    <li> Teléfono: <a href="tel:+34651339086">+34 651 339 086</a></li>
+                    <li> Información adicional: materiales y herramientas de limpieza </li>
+                </ul>
+
+
+
+            </li>
+            <li class="tarjeta">
+                <header>
+                    <h3>IKEA</h3>
+                    <h6>Carrer Alqueria Nova, 12, 46910 València, Valencia</h6>
+
+                </header>
+
+                <ul>
+                    <li>Vehículos admitidos: Camión grande (>3500kg)</li>
+                    <li>Horario:</li>
+                    <li> Teléfono: <a href="tel:+34611655454">+34 611 655 454</a></li>
+                    <li> Email: <a href="mailto:info@eppps.es">info@eppps.es</a></li>
+                    <li> Información adicional: Furgonetas para transportar materiales a otros puntos - Muchos
+                        voluntarios para carga, descarga y clasificar ROPA NO </li>
+                </ul>
+
+            </li>
+            <li class="tarjeta">
+                <header>
+                    <h3>La Tapicería
+                    </h3>
+                    <h6>Cam. de la Foya, 2D, 46470 Albal, Valencia
+                    </h6>
+
+                </header>
+
+                <ul>
+                    <li>Vehículos admitidos: Camión mediano</li>
+                    <li>Horario: 9:00 - 21:00</li>
+                    <li> Teléfono: <a href="tel:+34675515435">+34 675 515 435</a></li>
+                    <li> Información adicional: - Furgonetas para transportar a otras zonas - Agua y comida en lata -
+                        Materiales: escobones, escurresuelos (como los limpiacristales grandes), cubos / capazos, botas
+                        de agua, linternas (con pilas) y mascarillas aún tienen algo</li>
+                </ul>
+
 
             </li>
 
@@ -72,10 +175,48 @@
 
         <section>
             <h2>Noticias en tiempo real</h2>
-            <ul></ul>
+            <!-- AQUÍ PONER ENLACES EXTERNOS, COMO ALGUNOS TWITTER -->
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
 
+        <form action="voluntariado-form" method="get">
+            <header>
+                <h2> Inscripción para Voluntariado</h2>
+                <p>Si estás interesado en colaborar como voluntario durante esta emergencia, rellena el formulario a
+                    continuación.
+                    Tu ayuda es fundamental para apoyar a las personas afectadas y ayudar en las labores de
+                    recuperación.</p>
+            </header>
+            <label for="nombre">*</label>
+            <input type="text" id="nombre" name="nombre" required placeholder="Nombre completo">
+            <label for="telefono">*</label>
+            <input type="tel" id="teléfono" name="teléfono" required placeholder="Teléfono de contacto">
+            <label for="correo"></label>
+            <input type="email" id="correo" name="correo" placeholder="Tu correo ej: nombre@ejemplo.com">
+            <label for="fecha">*Día que quieres acudir</label>
+            <input type="date" id="fecha" name="fecha" required>
 
+            <button type="submit">Enviar</button>
+            <h5> Nos pondremos en contacto contigo para coordinar las labores de asistencia y rescate.</h5>
+        </form>
+
+        <section class="galeria">
+            <h2>Galería de imágenes</h2>
+            <div class="galeria__imagenes">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </section>
 
 
 
