--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency App - Página de ayuda en catástrofes.</title>
-    
+
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- <style>
@@ -28,7 +28,7 @@
                 <button class="header__boton" type="submit">Ir</button>
             </form>
             <ul class="header__menu">
-                <li><a class="header__menu header__nav" href="tel:666000666">Ayuda</a></li>
+                <li><a class="header__menu header__nav" href="tel:+34112">Ayuda</a></li>
                 <li><a class="header__menu header__nav" href="#">Actualidad</a></li>
                 <li><a class="header__menu header__nav" href="#">Por zonas</a></li>
             </ul>
@@ -88,7 +88,7 @@
     </main>
     <footer class="footer">
         <div class="footer__enlaces">
-            <a class="footer__enlace footer__enlace--ayuda" href="tel:666000666">Tel. Ayuda</a>
+            <a class="footer__enlace footer__enlace--ayuda" href="tel:+34112">Tel. Ayuda</a>
 
             <a class="footer__enlace footer__enlace--rrss" href="#"><i class="fab fa-twitter-square"></i></i></a>
             <a class="footer__enlace footer__enlace--rrss" href="#"><i class="fab fa-instagram-square"></i></a>
